aks-canary-user-based/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-demo
  labels:
    app.kubernetes.io/name: canary-demo
